# recipe_normalizer

./: .gitignore  Dockerfile  README.md  pyproject.toml
examples/: example_input_1.xml  example_input_2.yaml  expected_output.json
src/recipe_normalizer/: __init__.py  cli.py  exceptions.py  models.py
src/recipe_normalizer/converters/: __init__.py  units.py
src/recipe_normalizer/parsers/: __init__.py  base.py  registry.py  xml_parser.py  yaml_parser.py
src/recipe_normalizer/services/: __init__.py  normalizer.py
tests/: __init__.py  test_converters.py  test_models.py  test_normalizer.py  test_parsers.py
