[project]
name = "recipe-normalizer"
version = "0.1.0"
description = "A CLI tool to normalize cooking recipes from various formats to JSON"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyyaml>=6.0",
    "click>=8.1",
    "pydantic>=2.0",
    "pint>=0.24",
    "xmltodict>=0.13",
]

[project.scripts]
recipe-normalizer = "recipe_normalizer.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/recipe_normalizer"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "ruff>=0.8.0",
    "mypy>=1.13",
    "types-PyYAML>=6.0",
    "types-xmltodict>=0.13",
]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP", "B", "C4", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true